# anticheatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
src/anticheatbot/: __init__.py  bot_i18n.py  config.py  init_data.py  llm.py  locale_data.py  main.py  telegram_perms.py  translation_service.py  turnstile.py
src/anticheatbot/db/: __init__.py  models.py  session.py
src/anticheatbot/handlers/: __init__.py  admin_cmds.py  moderation.py  root.py  verify_flow.py
src/anticheatbot/services/: audit.py  groups.py  quiz.py
src/anticheatbot/web/: __init__.py  admin_api.py  app.py  json_body.py  verify_api.py
tests/: signing.py  test_bot_i18n.py  test_config.py  test_init_data.py  test_locale_data.py  test_translation_service.py  test_webapp_root.py
webapp/admin/: admin.js  index.html
webapp/shared/: i18n.js  ui.css
webapp/verify/: index.html  verify.js
