[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anticheatbot"
version = "0.1.0"
description = "Telegram anti-spam bot: Mini App verification, admin dashboard, LLM moderation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "aiohttp>=3.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "httpx>=0.27",
    "greenlet>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anticheatbot"]

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
